# docidx.hs

./: LICENSE  Makefile  docidx.cabal
src/: DocSources.hs  docidx.hs
src/Distribution/: GhcPkgList.hs
